--- a/homepage/templates/homepage/register.html
+++ b/homepage/templates/homepage/register.html
@@ -8,6 +8,22 @@
 {% block nav-register %}active{% endblock %}
 
 {% block content %}
+    <!-- Display form errors -->
+    <div class="container-fluid p-0">
+        {% for error in form.username.errors %}
+        <div class="alert alert-warning">{{ error }}</div>
+        {% endfor %}
+        {% for error in form.email.errors %}
+        <div class="alert alert-warning">{{ error }}</div>
+        {% endfor %}
+        {% for error in form.password1.errors %}
+        <div class="alert alert-warning">{{ error }}</div>
+        {% endfor %}
+        {% for error in form.password2.errors %}
+        <div class="alert alert-warning">{{ error }}</div>
+        {% endfor %}
+    </div>
+    
     <div class="container-fluid d-flex flex-column flex-grow-1 justify-content-center mt-4" style="background: var(--bs-gray-900);min-width: auto;">
         <div class="card shadow-lg d-flex flex-column o-hidden border-0" style="background: #231f20;margin-bottom: 0px;margin-top: 0px;min-height: 80vh;">
             <div class="card-body d-flex flex-column p-0">
@@ -20,20 +36,18 @@
                             <div class="text-center">
                                 <h4 class="text-light mb-4">Create an Account!</h4>
                             </div>
-                            <form class="user">
+                            <form class="user" method="POST">
+                                {% csrf_token %}
+                                <div class="mb-3">{{ form.username }}</div>
+                                <div class="mb-3">{{ form.email }}</div>
                                 <div class="row mb-3">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="bg-dark form-control form-control-user" type="text" id="exampleFirstName-1" placeholder="First Name" name="first_name"></div>
-                                    <div class="col-sm-6"><input class="bg-dark form-control form-control-user" type="text" id="exampleFirstName-2" placeholder="Last Name" name="last_name"></div>
-                                </div>
-                                <div class="mb-3"><input class="bg-dark form-control form-control-user" type="email" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email Address" name="email"></div>
-                                <div class="row mb-3">
-                                    <div class="col-sm-6 mb-3 mb-sm-0"><input class="bg-dark form-control form-control-user" type="password" id="examplePasswordInput" placeholder="Password" name="password"></div>
-                                    <div class="col-sm-6"><input class="bg-dark form-control form-control-user" type="password" id="exampleRepeatPasswordInput" placeholder="Repeat Password" name="password_repeat"></div>
+                                    <div class="col-sm-6 mb-3 mb-sm-0">{{ form.password1 }}</div>
+                                    <div class="col-sm-6">{{ form.password2 }}</div>
                                 </div><button class="btn btn-primary d-block btn-user w-100" type="submit" style="background: var(--bs-primary);">Register Account</button>
                                 <hr>
                             </form>
-                            <div class="text-center"><a class="small" href="forgot-password.html" style="color: var(--bs-primary);">Forgot Password?</a></div>
-                            <div class="text-center"><a class="small" href="login.html" style="color: var(--bs-primary);">Already have an account? Login!</a></div>
+                            <div class="text-center"><a class="small" href="{% url 'forgot-password' %}" style="color: var(--bs-primary);">Forgot Password?</a></div>
+                            <div class="text-center"><a class="small" href="{% url 'login' %}" style="color: var(--bs-primary);">Already have an account? Login!</a></div>
                         </div>
                     </div>
                 </div>
